base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jupyter
  annotations:
    linkerd.io/inject: disabled
